#for including coinlogo.h and simlogo.h
include_directories(${CMAKE_CURRENT_SOURCE_DIR})

add_subdirectory(SIM-20010803)
add_subdirectory(SIM-20010824)
add_subdirectory(SIM-20010914)
add_subdirectory(SIM-20011005)
add_subdirectory(SIM-20011116)
add_subdirectory(SIM-20020118)
add_subdirectory(SIM-20020503)
