############################################################################

BUILT_SOURCES = \
	translate1.cpp \
	translate2.cpp \
	dragpoint.cpp

noinst_PROGRAMS = translate1 translate2 dragpoint

translate1_SOURCES = translate1.cpp

translate2_SOURCES = translate2.cpp

dragpoint_SOURCES = dragpoint.cpp

############################################################################
